--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -231,6 +231,7 @@
     <ClInclude Include="rel\include\ttyd\mario_party.h" />
     <ClInclude Include="rel\include\ttyd\mario_pouch.h" />
     <ClInclude Include="rel\include\ttyd\memory.h" />
+    <ClInclude Include="rel\include\ttyd\msgdrv.h" />
     <ClInclude Include="rel\include\ttyd\npcdrv.h" />
     <ClInclude Include="rel\include\ttyd\OSCache.h" />
     <ClInclude Include="rel\include\ttyd\OSLink.h" />
