Continued item fixes

--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -163,10 +163,13 @@
     <ClInclude Include="rel\include\AP\tou2.h" />
     <ClInclude Include="rel\include\AP\usu.h" />
     <ClInclude Include="rel\include\AP\win.h" />
+    <ClInclude Include="rel\include\assembly.h" />
     <ClInclude Include="rel\include\common.h" />
     <ClInclude Include="rel\include\common_types.h" />
     <ClInclude Include="rel\include\console.h" />
+    <ClInclude Include="rel\include\errorHandling.h" />
     <ClInclude Include="rel\include\evt_cmd.h" />
+    <ClInclude Include="rel\include\gamePatches.h" />
     <ClInclude Include="rel\include\gc\demo.h" />
     <ClInclude Include="rel\include\gc\exi.h" />
     <ClInclude Include="rel\include\gc\mtx.h" />
@@ -181,6 +184,7 @@
     <ClInclude Include="rel\include\OWR.h" />
     <ClInclude Include="rel\include\OWR_STATE.h" />
     <ClInclude Include="rel\include\patch.h" />
+    <ClInclude Include="rel\include\printf.h" />
     <ClInclude Include="rel\include\StateManager.h" />
     <ClInclude Include="rel\include\timer.h" />
     <ClInclude Include="rel\include\ttyd\animdrv.h" />
@@ -238,6 +242,8 @@
     <ClInclude Include="rel\include\ttyd\party.h" />
     <ClInclude Include="rel\include\ttyd\seqdrv.h" />
     <ClInclude Include="rel\include\ttyd\seq_logo.h" />
+    <ClInclude Include="rel\include\ttyd\seq_mapchange.h" />
+    <ClInclude Include="rel\include\ttyd\seq_title.h" />
     <ClInclude Include="rel\include\ttyd\string.h" />
     <ClInclude Include="rel\include\ttyd\swdrv.h" />
     <ClInclude Include="rel\include\ttyd\system.h" />
@@ -282,10 +288,13 @@
     <ClCompile Include="rel\source\con_perf.cpp" />
     <ClCompile Include="rel\source\con_seq.cpp" />
     <ClCompile Include="rel\source\cxx.cpp" />
+    <ClCompile Include="rel\source\errorHandling.cpp" />
+    <ClCompile Include="rel\source\gamePatches.cpp" />
     <ClCompile Include="rel\source\keyboard.cpp" />
     <ClCompile Include="rel\source\mod.cpp" />
     <ClCompile Include="rel\source\OWR.cpp" />
     <ClCompile Include="rel\source\patch.cpp" />
+    <ClCompile Include="rel\source\printf.cpp" />
     <ClCompile Include="rel\source\rel.cpp" />
     <ClCompile Include="rel\source\StateManager.cpp" />
     <ClCompile Include="rel\source\ug.cpp" />
@@ -297,6 +306,8 @@
     <None Include="rel\include\ttyd.jp.lst" />
     <None Include="rel\include\ttyd.us.lst" />
     <None Include="rel\source\asm\asm_main.s" />
+    <None Include="rel\source\cxx.ld" />
+    <None Include="rel\source\patch_ih.S" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
