--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -226,6 +226,7 @@
     <ClInclude Include="rel\include\ttyd\evt_yuugijou.h" />
     <ClInclude Include="rel\include\ttyd\fontmgr.h" />
     <ClInclude Include="rel\include\ttyd\hitdrv.h" />
+    <ClInclude Include="rel\include\ttyd\icondrv.h" />
     <ClInclude Include="rel\include\ttyd\itemdrv.h" />
     <ClInclude Include="rel\include\ttyd\item_data.h" />
     <ClInclude Include="rel\include\ttyd\mapdata.h" />
