--- a/TTYDAP.vcxproj.filters
+++ b/TTYDAP.vcxproj.filters
@@ -348,6 +348,27 @@
     <ClInclude Include="rel\include\ttyd\msgdrv.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="rel\include\assembly.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\errorHandling.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\gamePatches.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\printf.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\ttyd\seq_mapchange.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\ttyd\seq_title.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\ttyd\icondrv.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="rel\source\common.cpp">
@@ -485,6 +506,15 @@
     <ClCompile Include="rel\source\AP\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="rel\source\errorHandling.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="rel\source\gamePatches.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="rel\source\printf.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="rel\include\ttyd.us.lst" />
@@ -492,5 +522,7 @@
     <None Include="rel\include\ttyd.eu.lst" />
     <None Include="cpp.hint" />
     <None Include="rel\source\asm\asm_main.s" />
+    <None Include="rel\source\cxx.ld" />
+    <None Include="rel\source\patch_ih.S" />
   </ItemGroup>
 </Project>
