Misc patches + Item Receiving from AP

--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -307,6 +307,9 @@
     <None Include="rel\include\ttyd.jp.lst" />
     <None Include="rel\include\ttyd.us.lst" />
     <None Include="rel\source\asm\asm_main.s" />
+    <None Include="rel\source\asm\CrashScreenDecrementYPos.s" />
+    <None Include="rel\source\asm\FixBlooperCrash1.s" />
+    <None Include="rel\source\asm\FixBlooperCrash2.s" />
     <None Include="rel\source\cxx.ld" />
     <None Include="rel\source\patch_ih.S" />
   </ItemGroup>
