--- a/TTYDAP.vcxproj.filters
+++ b/TTYDAP.vcxproj.filters
@@ -521,8 +521,11 @@
     <None Include="rel\include\ttyd.jp.lst" />
     <None Include="rel\include\ttyd.eu.lst" />
     <None Include="cpp.hint" />
-    <None Include="rel\source\asm\asm_main.s" />
     <None Include="rel\source\cxx.ld" />
     <None Include="rel\source\patch_ih.S" />
+    <None Include="rel\source\asm\CrashScreenDecrementYPos.s" />
+    <None Include="rel\source\asm\FixBlooperCrash1.s" />
+    <None Include="rel\source\asm\FixBlooperCrash2.s" />
+    <None Include="rel\source\asm\asm_main.s" />
   </ItemGroup>
 </Project>
