Further Project Cleanup

--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -132,37 +132,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="rel\include\AP\aaa.h" />
-    <ClInclude Include="rel\include\AP\aji.h" />
-    <ClInclude Include="rel\include\AP\bom.h" />
-    <ClInclude Include="rel\include\AP\dou.h" />
-    <ClInclude Include="rel\include\AP\eki.h" />
-    <ClInclude Include="rel\include\AP\end.h" />
-    <ClInclude Include="rel\include\AP\gon.h" />
-    <ClInclude Include="rel\include\AP\gor_00.h" />
-    <ClInclude Include="rel\include\AP\gor_01.h" />
-    <ClInclude Include="rel\include\AP\gor_02.h" />
-    <ClInclude Include="rel\include\AP\gor_03.h" />
-    <ClInclude Include="rel\include\AP\gor_04.h" />
-    <ClInclude Include="rel\include\AP\gor_misc.h" />
-    <ClInclude Include="rel\include\AP\gra.h" />
-    <ClInclude Include="rel\include\AP\hei.h" />
-    <ClInclude Include="rel\include\AP\hom.h" />
-    <ClInclude Include="rel\include\AP\jin.h" />
-    <ClInclude Include="rel\include\AP\kpa.h" />
-    <ClInclude Include="rel\include\AP\las.h" />
-    <ClInclude Include="rel\include\AP\main.h" />
-    <ClInclude Include="rel\include\AP\moo.h" />
-    <ClInclude Include="rel\include\AP\mri.h" />
-    <ClInclude Include="rel\include\AP\muj.h" />
-    <ClInclude Include="rel\include\AP\nok.h" />
-    <ClInclude Include="rel\include\AP\pik.h" />
-    <ClInclude Include="rel\include\AP\rsh.h" />
-    <ClInclude Include="rel\include\AP\tik.h" />
-    <ClInclude Include="rel\include\AP\tou.h" />
-    <ClInclude Include="rel\include\AP\tou2.h" />
-    <ClInclude Include="rel\include\AP\usu.h" />
-    <ClInclude Include="rel\include\AP\win.h" />
+    <ClInclude Include="rel\include\AP\rel_patch_definitions.h" />
     <ClInclude Include="rel\include\assembly.h" />
     <ClInclude Include="rel\include\common.h" />
     <ClInclude Include="rel\include\common_types.h" />
