--- a/TTYDAP.vcxproj.filters
+++ b/TTYDAP.vcxproj.filters
@@ -225,9 +225,6 @@
     <ClInclude Include="rel\include\gc\OSLink.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="rel\include\AP\gor_00.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="rel\include\ttyd\evt_urouro.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -237,82 +234,7 @@
     <ClInclude Include="rel\include\ttyd\evt_hit.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="rel\include\AP\gor_01.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="rel\include\AP\gor_02.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="rel\include\AP\gor_03.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="rel\include\AP\gor_04.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="rel\include\AP\gor_misc.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="rel\include\AP\hei.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="rel\include\AP\nok.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="rel\include\AP\gon.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="rel\include\AP\win.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="rel\include\AP\mri.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="rel\include\AP\tou.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="rel\include\AP\tou2.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="rel\include\AP\usu.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="rel\include\AP\gra.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="rel\include\AP\jin.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="rel\include\AP\muj.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="rel\include\AP\dou.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="rel\include\AP\rsh.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="rel\include\AP\eki.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="rel\include\AP\end.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="rel\include\AP\hom.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="rel\include\AP\bom.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="rel\include\AP\pik.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="rel\include\AP\moo.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="rel\include\ttyd\evt_seq.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="rel\include\AP\aji.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="rel\include\ttyd\evt_case.h">
@@ -324,22 +246,7 @@
     <ClInclude Include="rel\include\ttyd\mario_pouch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="rel\include\AP\aaa.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="rel\include\AP\kpa.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="rel\include\AP\las.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="rel\include\AP\tik.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="rel\include\StateManager.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="rel\include\AP\main.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="rel\include\ttyd\evt_paper.h">
@@ -367,6 +274,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="rel\include\ttyd\icondrv.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\AP\rel_patch_definitions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
