Initial clang + Misc. Bugfixes

--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -42,8 +42,8 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
+    <PlatformToolset>v143</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -132,6 +132,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="rel\include\AP\helper_functions.h" />
     <ClInclude Include="rel\include\AP\rel_patch_definitions.h" />
     <ClInclude Include="rel\include\assembly.h" />
     <ClInclude Include="rel\include\common.h" />
@@ -261,6 +262,7 @@
     <ClCompile Include="rel\source\cxx.cpp" />
     <ClCompile Include="rel\source\errorHandling.cpp" />
     <ClCompile Include="rel\source\gamePatches.cpp" />
+    <ClCompile Include="rel\source\helper_fuctions.cpp" />
     <ClCompile Include="rel\source\keyboard.cpp" />
     <ClCompile Include="rel\source\mod.cpp" />
     <ClCompile Include="rel\source\OWR.cpp" />
@@ -272,6 +274,7 @@
     <ClCompile Include="rel\source\util.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="C:\Users\james\Downloads\.clang-format" />
     <None Include="cpp.hint" />
     <None Include="rel\include\ttyd.eu.lst" />
     <None Include="rel\include\ttyd.jp.lst" />
