--- a/TTYDAP.vcxproj.filters
+++ b/TTYDAP.vcxproj.filters
@@ -279,6 +279,9 @@
     <ClInclude Include="rel\include\AP\rel_patch_definitions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="rel\include\AP\helper_functions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="rel\source\common.cpp">
@@ -425,6 +428,9 @@
     <ClCompile Include="rel\source\printf.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="rel\source\helper_fuctions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="rel\include\ttyd.us.lst" />
@@ -437,5 +443,6 @@
     <None Include="rel\source\asm\FixBlooperCrash1.s" />
     <None Include="rel\source\asm\FixBlooperCrash2.s" />
     <None Include="rel\source\asm\asm_main.s" />
+    <None Include="C:\Users\james\Downloads\.clang-format" />
   </ItemGroup>
 </Project>
