--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -153,7 +153,6 @@
     <ClInclude Include="rel\include\keyboard.h" />
     <ClInclude Include="rel\include\mod.h" />
     <ClInclude Include="rel\include\OWR.h" />
-    <ClInclude Include="rel\include\OWR_STATE.h" />
     <ClInclude Include="rel\include\patch.h" />
     <ClInclude Include="rel\include\printf.h" />
     <ClInclude Include="rel\include\StateManager.h" />
@@ -275,6 +274,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="C:\Users\james\Downloads\.clang-format" />
+    <None Include="C:\Users\james\Downloads\PreventDiaryTextboxSelection.s" />
     <None Include="cpp.hint" />
     <None Include="rel\include\ttyd.eu.lst" />
     <None Include="rel\include\ttyd.jp.lst" />
@@ -283,6 +283,7 @@
     <None Include="rel\source\asm\CrashScreenDecrementYPos.s" />
     <None Include="rel\source\asm\FixBlooperCrash1.s" />
     <None Include="rel\source\asm\FixBlooperCrash2.s" />
+    <None Include="rel\source\asm\PreventDiaryTextboxSelection.s" />
     <None Include="rel\source\cxx.ld" />
     <None Include="rel\source\patch_ih.S" />
   </ItemGroup>
