--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -147,9 +147,9 @@
     <ClInclude Include="rel\include\gc\os.h" />
     <ClInclude Include="rel\include\gc\OSCache.h" />
     <ClInclude Include="rel\include\gc\OSLink.h" />
+    <ClInclude Include="rel\include\gc\pad.h" />
     <ClInclude Include="rel\include\gc\si.h" />
     <ClInclude Include="rel\include\gc\types.h" />
-    <ClInclude Include="rel\include\item_data.h" />
     <ClInclude Include="rel\include\keyboard.h" />
     <ClInclude Include="rel\include\mod.h" />
     <ClInclude Include="rel\include\OWR.h" />
@@ -208,7 +208,6 @@
     <ClInclude Include="rel\include\ttyd\memory.h" />
     <ClInclude Include="rel\include\ttyd\msgdrv.h" />
     <ClInclude Include="rel\include\ttyd\npcdrv.h" />
-    <ClInclude Include="rel\include\ttyd\OSCache.h" />
     <ClInclude Include="rel\include\ttyd\OSLink.h" />
     <ClInclude Include="rel\include\ttyd\party.h" />
     <ClInclude Include="rel\include\ttyd\seqdrv.h" />
@@ -273,8 +272,6 @@
     <ClCompile Include="rel\source\util.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="C:\Users\james\Downloads\.clang-format" />
-    <None Include="C:\Users\james\Downloads\PreventDiaryTextboxSelection.s" />
     <None Include="cpp.hint" />
     <None Include="rel\include\ttyd.eu.lst" />
     <None Include="rel\include\ttyd.jp.lst" />
