--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -272,6 +272,7 @@
     <ClCompile Include="rel\source\util.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include=".clang-format" />
     <None Include="cpp.hint" />
     <None Include="rel\include\ttyd.eu.lst" />
     <None Include="rel\include\ttyd.jp.lst" />
