--- a/rel/Makefile
+++ b/rel/Makefile
@@ -13,7 +13,7 @@ endif
 
 include $(DEVKITPPC)/gamecube_rules
 
-export GCIPACK	:=	python3 $(realpath ../../gcipack/gcipack.py)
+export GCIPACK	:=	python $(realpath ../../gcipack/gcipack.py)
 export ELF2REL	:=	elf2rel
 
 ifeq ($(VERSION),)
