--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -194,6 +194,7 @@
     <ClInclude Include="rel\include\ttyd\evt_win.h" />
     <ClInclude Include="rel\include\ttyd\evt_window.h" />
     <ClInclude Include="rel\include\ttyd\evt_yuugijou.h" />
+    <ClInclude Include="rel\include\ttyd\fadedrv.h" />
     <ClInclude Include="rel\include\ttyd\fontmgr.h" />
     <ClInclude Include="rel\include\ttyd\hitdrv.h" />
     <ClInclude Include="rel\include\ttyd\icondrv.h" />
