--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -132,6 +132,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="C:\Users\james\Downloads\OSContext.h" />
+    <ClInclude Include="C:\Users\james\Downloads\OSModule.h" />
     <ClInclude Include="rel\include\AP\helper_functions.h" />
     <ClInclude Include="rel\include\AP\rel_patch_definitions.h" />
     <ClInclude Include="rel\include\assembly.h" />
@@ -146,7 +148,8 @@
     <ClInclude Include="rel\include\gc\mtx.h" />
     <ClInclude Include="rel\include\gc\os.h" />
     <ClInclude Include="rel\include\gc\OSCache.h" />
-    <ClInclude Include="rel\include\gc\OSLink.h" />
+    <ClInclude Include="rel\include\gc\OSContext.h" />
+    <ClInclude Include="rel\include\gc\OSModule.h" />
     <ClInclude Include="rel\include\gc\pad.h" />
     <ClInclude Include="rel\include\gc\si.h" />
     <ClInclude Include="rel\include\gc\types.h" />
