--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -210,6 +210,7 @@
     <ClInclude Include="rel\include\ttyd\mario_party.h" />
     <ClInclude Include="rel\include\ttyd\mario_pouch.h" />
     <ClInclude Include="rel\include\ttyd\memory.h" />
+    <ClInclude Include="rel\include\ttyd\mri_puni.h" />
     <ClInclude Include="rel\include\ttyd\msgdrv.h" />
     <ClInclude Include="rel\include\ttyd\npcdrv.h" />
     <ClInclude Include="rel\include\ttyd\OSLink.h" />
