--- a/TTYDAP.vcxproj.filters
+++ b/TTYDAP.vcxproj.filters
@@ -213,9 +213,6 @@
     <ClInclude Include="rel\include\gc\OSCache.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="rel\include\gc\OSLink.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="rel\include\ttyd\evt_urouro.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -277,6 +274,21 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="rel\include\ttyd\fadedrv.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="C:\Users\james\Downloads\OSContext.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="C:\Users\james\Downloads\OSModule.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\gc\OSContext.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\gc\OSModule.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\ttyd\mri_puni.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
