--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -191,6 +191,7 @@
     <ClInclude Include="rel\include\ttyd\evt_pouch.h" />
     <ClInclude Include="rel\include\ttyd\evt_seq.h" />
     <ClInclude Include="rel\include\ttyd\evt_shop.h" />
+    <ClInclude Include="rel\include\ttyd\evt_shuryolight.h" />
     <ClInclude Include="rel\include\ttyd\evt_snd.h" />
     <ClInclude Include="rel\include\ttyd\evt_sub.h" />
     <ClInclude Include="rel\include\ttyd\evt_urouro.h" />
@@ -226,6 +227,7 @@
     <ClInclude Include="rel\include\util.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="rel\include\ttyd\countdown.h" />
     <ClCompile Include="rel\source\AP\aaa.cpp" />
     <ClCompile Include="rel\source\AP\aji.cpp" />
     <ClCompile Include="rel\source\AP\bom.cpp" />
