--- a/TTYDAP.vcxproj.filters
+++ b/TTYDAP.vcxproj.filters
@@ -291,6 +291,9 @@
     <ClInclude Include="rel\include\ttyd\mri_puni.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="rel\include\ttyd\evt_shuryolight.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="rel\source\common.cpp">
@@ -438,6 +441,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="rel\source\helper_fuctions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="rel\include\ttyd\countdown.h">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
