--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -140,10 +140,12 @@
     <ClInclude Include="rel\include\common.h" />
     <ClInclude Include="rel\include\common_types.h" />
     <ClInclude Include="rel\include\console.h" />
+    <ClInclude Include="rel\include\cxx.h" />
     <ClInclude Include="rel\include\errorHandling.h" />
     <ClInclude Include="rel\include\evt_cmd.h" />
     <ClInclude Include="rel\include\gamePatches.h" />
     <ClInclude Include="rel\include\gc\demo.h" />
+    <ClInclude Include="rel\include\gc\dvd.h" />
     <ClInclude Include="rel\include\gc\exi.h" />
     <ClInclude Include="rel\include\gc\mtx.h" />
     <ClInclude Include="rel\include\gc\os.h" />
@@ -158,6 +160,7 @@
     <ClInclude Include="rel\include\OWR.h" />
     <ClInclude Include="rel\include\patch.h" />
     <ClInclude Include="rel\include\printf.h" />
+    <ClInclude Include="rel\include\relmgr.h" />
     <ClInclude Include="rel\include\StateManager.h" />
     <ClInclude Include="rel\include\timer.h" />
     <ClInclude Include="rel\include\ttyd\animdrv.h" />
@@ -225,6 +228,33 @@
     <ClInclude Include="rel\include\ttyd\system.h" />
     <ClInclude Include="rel\include\ug.h" />
     <ClInclude Include="rel\include\util.h" />
+    <ClInclude Include="rel\include\visibility.h" />
+    <ClInclude Include="rel\subrels\aaa\include\subrel_aaa.h" />
+    <ClInclude Include="rel\subrels\aji\include\subrel_aji.h" />
+    <ClInclude Include="rel\subrels\bom\include\subrel_bom.h" />
+    <ClInclude Include="rel\subrels\dou\include\subrel_dou.h" />
+    <ClInclude Include="rel\subrels\eki\include\subrel_eki.h" />
+    <ClInclude Include="rel\subrels\end\include\subrel_end.h" />
+    <ClInclude Include="rel\subrels\gon\include\subrel_gon.h" />
+    <ClInclude Include="rel\subrels\gor\include\subrel_gor.h" />
+    <ClInclude Include="rel\subrels\gra\include\subrel_gra.h" />
+    <ClInclude Include="rel\subrels\hei\include\subrel_hei.h" />
+    <ClInclude Include="rel\subrels\hom\include\subrel_hom.h" />
+    <ClInclude Include="rel\subrels\init\include\subrel_main.h" />
+    <ClInclude Include="rel\subrels\jin\include\subrel_jin.h" />
+    <ClInclude Include="rel\subrels\kpa\include\subrel_kpa.h" />
+    <ClInclude Include="rel\subrels\las\include\subrel_las.h" />
+    <ClInclude Include="rel\subrels\moo\include\subrel_moo.h" />
+    <ClInclude Include="rel\subrels\mri\include\subrel_mri.h" />
+    <ClInclude Include="rel\subrels\muj\include\subrel_muj.h" />
+    <ClInclude Include="rel\subrels\nok\include\subrel_nok.h" />
+    <ClInclude Include="rel\subrels\pik\include\subrel_pik.h" />
+    <ClInclude Include="rel\subrels\rsh\include\subrel_rsh.h" />
+    <ClInclude Include="rel\subrels\tik\include\subrel_tik.h" />
+    <ClInclude Include="rel\subrels\tou2\include\subrel_tou2.h" />
+    <ClInclude Include="rel\subrels\tou\include\subrel_tou.h" />
+    <ClInclude Include="rel\subrels\usu\include\subrel_usu.h" />
+    <ClInclude Include="rel\subrels\win\include\subrel_win.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="rel\include\ttyd\countdown.h" />
@@ -274,9 +304,44 @@
     <ClCompile Include="rel\source\patch.cpp" />
     <ClCompile Include="rel\source\printf.cpp" />
     <ClCompile Include="rel\source\rel.cpp" />
+    <ClCompile Include="rel\source\relmgr.cpp" />
     <ClCompile Include="rel\source\StateManager.cpp" />
     <ClCompile Include="rel\source\ug.cpp" />
     <ClCompile Include="rel\source\util.cpp" />
+    <ClCompile Include="rel\subrels\aaa\source\main.cpp" />
+    <ClCompile Include="rel\subrels\aji\source\main.cpp" />
+    <ClCompile Include="rel\subrels\bom\source\main.cpp" />
+    <ClCompile Include="rel\subrels\dou\source\main.cpp" />
+    <ClCompile Include="rel\subrels\eki\source\main.cpp" />
+    <ClCompile Include="rel\subrels\end\source\main.cpp" />
+    <ClCompile Include="rel\subrels\gon\source\main.cpp" />
+    <ClCompile Include="rel\subrels\gor\source\gor_00.cpp" />
+    <ClCompile Include="rel\subrels\gor\source\gor_01.cpp" />
+    <ClCompile Include="rel\subrels\gor\source\gor_02.cpp" />
+    <ClCompile Include="rel\subrels\gor\source\gor_03.cpp" />
+    <ClCompile Include="rel\subrels\gor\source\gor_04.cpp" />
+    <ClCompile Include="rel\subrels\gor\source\gor_misc.cpp" />
+    <ClCompile Include="rel\subrels\gor\source\main.cpp" />
+    <ClCompile Include="rel\subrels\gra\source\main.cpp" />
+    <ClCompile Include="rel\subrels\hei\source\main.cpp" />
+    <ClCompile Include="rel\subrels\hom\source\main.cpp" />
+    <ClCompile Include="rel\subrels\init\source\gamePatches.cpp" />
+    <ClCompile Include="rel\subrels\init\source\main.cpp" />
+    <ClCompile Include="rel\subrels\init\source\OWR.cpp" />
+    <ClCompile Include="rel\subrels\jin\source\main.cpp" />
+    <ClCompile Include="rel\subrels\kpa\source\main.cpp" />
+    <ClCompile Include="rel\subrels\las\source\main.cpp" />
+    <ClCompile Include="rel\subrels\moo\source\main.cpp" />
+    <ClCompile Include="rel\subrels\mri\source\main.cpp" />
+    <ClCompile Include="rel\subrels\muj\source\main.cpp" />
+    <ClCompile Include="rel\subrels\nok\source\main.cpp" />
+    <ClCompile Include="rel\subrels\pik\source\main.cpp" />
+    <ClCompile Include="rel\subrels\rsh\source\main.cpp" />
+    <ClCompile Include="rel\subrels\tik\source\main.cpp" />
+    <ClCompile Include="rel\subrels\tou2\source\main.cpp" />
+    <ClCompile Include="rel\subrels\tou\source\main.cpp" />
+    <ClCompile Include="rel\subrels\usu\source\main.cpp" />
+    <ClCompile Include="rel\subrels\win\source\main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".clang-format" />
