--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -223,6 +223,7 @@
     <ClInclude Include="rel\include\ttyd\seq_logo.h" />
     <ClInclude Include="rel\include\ttyd\seq_mapchange.h" />
     <ClInclude Include="rel\include\ttyd\seq_title.h" />
+    <ClInclude Include="rel\include\ttyd\statuswindow.h" />
     <ClInclude Include="rel\include\ttyd\string.h" />
     <ClInclude Include="rel\include\ttyd\swdrv.h" />
     <ClInclude Include="rel\include\ttyd\system.h" />
@@ -328,6 +329,7 @@
     <ClCompile Include="rel\subrels\init\source\gamePatches.cpp" />
     <ClCompile Include="rel\subrels\init\source\main.cpp" />
     <ClCompile Include="rel\subrels\init\source\OWR.cpp" />
+    <ClCompile Include="rel\subrels\init\source\StateManager.cpp" />
     <ClCompile Include="rel\subrels\jin\source\main.cpp" />
     <ClCompile Include="rel\subrels\kpa\source\main.cpp" />
     <ClCompile Include="rel\subrels\las\source\main.cpp" />
@@ -353,6 +355,8 @@
     <None Include="rel\source\asm\CrashScreenDecrementYPos.s" />
     <None Include="rel\source\asm\FixBlooperCrash1.s" />
     <None Include="rel\source\asm\FixBlooperCrash2.s" />
+    <None Include="rel\source\asm\FixEvtMapBlendSetFlagFollowerCrash.s" />
+    <None Include="rel\source\asm\FixEvtMapBlendSetFlagPartnerCrash.s" />
     <None Include="rel\source\asm\PreventDiaryTextboxSelection.s" />
     <None Include="rel\source\cxx.ld" />
     <None Include="rel\source\patch_ih.S" />
