--- a/TTYDAP.vcxproj.filters
+++ b/TTYDAP.vcxproj.filters
@@ -384,6 +384,9 @@
     <ClInclude Include="rel\subrels\win\include\subrel_win.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="rel\include\ttyd\statuswindow.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="rel\source\common.cpp">
@@ -641,6 +644,9 @@
     <ClCompile Include="rel\subrels\win\source\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="rel\subrels\init\source\StateManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="rel\include\ttyd.us.lst" />
@@ -655,5 +661,7 @@
     <None Include="rel\source\asm\asm_main.s" />
     <None Include="rel\source\asm\PreventDiaryTextboxSelection.s" />
     <None Include=".clang-format" />
+    <None Include="rel\source\asm\FixEvtMapBlendSetFlagFollowerCrash.s" />
+    <None Include="rel\source\asm\FixEvtMapBlendSetFlagPartnerCrash.s" />
   </ItemGroup>
 </Project>
