--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -227,6 +227,9 @@
     <ClInclude Include="rel\include\ttyd\string.h" />
     <ClInclude Include="rel\include\ttyd\swdrv.h" />
     <ClInclude Include="rel\include\ttyd\system.h" />
+    <ClInclude Include="rel\include\ttyd\win_item.h" />
+    <ClInclude Include="rel\include\ttyd\win_main.h" />
+    <ClInclude Include="rel\include\ttyd\win_root.h" />
     <ClInclude Include="rel\include\ug.h" />
     <ClInclude Include="rel\include\util.h" />
     <ClInclude Include="rel\include\visibility.h" />
