--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -219,6 +219,7 @@
     <ClInclude Include="rel\include\ttyd\npcdrv.h" />
     <ClInclude Include="rel\include\ttyd\OSLink.h" />
     <ClInclude Include="rel\include\ttyd\party.h" />
+    <ClInclude Include="rel\include\ttyd\pmario_sound.h" />
     <ClInclude Include="rel\include\ttyd\seqdrv.h" />
     <ClInclude Include="rel\include\ttyd\seq_logo.h" />
     <ClInclude Include="rel\include\ttyd\seq_mapchange.h" />
