Show Required Stars + Tattlesanity implentation

--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -164,6 +164,8 @@
     <ClInclude Include="rel\include\StateManager.h" />
     <ClInclude Include="rel\include\timer.h" />
     <ClInclude Include="rel\include\ttyd\animdrv.h" />
+    <ClInclude Include="rel\include\ttyd\battle_audience.h" />
+    <ClInclude Include="rel\include\ttyd\battle_event_cmd.h" />
     <ClInclude Include="rel\include\ttyd\common_types.h" />
     <ClInclude Include="rel\include\ttyd\database.h" />
     <ClInclude Include="rel\include\ttyd\dispdrv.h" />
@@ -173,6 +175,7 @@
     <ClInclude Include="rel\include\ttyd\evtmgr.h" />
     <ClInclude Include="rel\include\ttyd\evtmgr_cmd.h" />
     <ClInclude Include="rel\include\ttyd\evt_aji.h" />
+    <ClInclude Include="rel\include\ttyd\evt_audience.h" />
     <ClInclude Include="rel\include\ttyd\evt_badgeshop.h" />
     <ClInclude Include="rel\include\ttyd\evt_bero.h" />
     <ClInclude Include="rel\include\ttyd\evt_cam.h" />
@@ -208,6 +211,7 @@
     <ClInclude Include="rel\include\ttyd\itemdrv.h" />
     <ClInclude Include="rel\include\ttyd\item_data.h" />
     <ClInclude Include="rel\include\ttyd\mapdata.h" />
+    <ClInclude Include="rel\include\ttyd\mapdrv.h" />
     <ClInclude Include="rel\include\ttyd\mario.h" />
     <ClInclude Include="rel\include\ttyd\mariost.h" />
     <ClInclude Include="rel\include\ttyd\mario_motion.h" />
