--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -140,6 +140,7 @@
     <ClInclude Include="rel\include\common.h" />
     <ClInclude Include="rel\include\common_types.h" />
     <ClInclude Include="rel\include\console.h" />
+    <ClInclude Include="rel\include\customWarp.h" />
     <ClInclude Include="rel\include\cxx.h" />
     <ClInclude Include="rel\include\errorHandling.h" />
     <ClInclude Include="rel\include\evt_cmd.h" />
