--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -268,6 +268,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="rel\include\ttyd\countdown.h" />
+    <ClCompile Include="rel\include\ttyd\gor_02.h" />
     <ClCompile Include="rel\source\AP\aaa.cpp" />
     <ClCompile Include="rel\source\AP\aji.cpp" />
     <ClCompile Include="rel\source\AP\bom.cpp" />
