--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="rel\include\gc\demo.h" />
     <ClInclude Include="rel\include\gc\dvd.h" />
     <ClInclude Include="rel\include\gc\exi.h" />
+    <ClInclude Include="rel\include\gc\gx.h" />
     <ClInclude Include="rel\include\gc\mtx.h" />
     <ClInclude Include="rel\include\gc\os.h" />
     <ClInclude Include="rel\include\gc\OSCache.h" />
@@ -233,6 +234,7 @@
     <ClInclude Include="rel\include\ttyd\string.h" />
     <ClInclude Include="rel\include\ttyd\swdrv.h" />
     <ClInclude Include="rel\include\ttyd\system.h" />
+    <ClInclude Include="rel\include\ttyd\windowdrv.h" />
     <ClInclude Include="rel\include\ttyd\win_item.h" />
     <ClInclude Include="rel\include\ttyd\win_main.h" />
     <ClInclude Include="rel\include\ttyd\win_root.h" />
