--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -168,6 +168,7 @@
     <ClInclude Include="rel\include\ttyd\animdrv.h" />
     <ClInclude Include="rel\include\ttyd\battle_audience.h" />
     <ClInclude Include="rel\include\ttyd\battle_event_cmd.h" />
+    <ClInclude Include="rel\include\ttyd\battle_unit.h" />
     <ClInclude Include="rel\include\ttyd\common_types.h" />
     <ClInclude Include="rel\include\ttyd\database.h" />
     <ClInclude Include="rel\include\ttyd\dispdrv.h" />
