Fix party ptr in monosiriItemCheck

--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -166,6 +166,7 @@
     <ClInclude Include="rel\include\StateManager.h" />
     <ClInclude Include="rel\include\timer.h" />
     <ClInclude Include="rel\include\ttyd\animdrv.h" />
+    <ClInclude Include="rel\include\ttyd\battle.h" />
     <ClInclude Include="rel\include\ttyd\battle_audience.h" />
     <ClInclude Include="rel\include\ttyd\battle_event_cmd.h" />
     <ClInclude Include="rel\include\ttyd\battle_unit.h" />
